--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-keyboard": "^3.6.45",
+    "simple-keyboard": "^3.6.36",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
